force-app/main/default/objects/AAO_Qualifier_Binding__mdt/AAO_Qualifier_Binding__mdt.object-meta.xml
<CustomObject>
    <description>WHAT ANSWERS A SALES-PROCESS QUALIFIER. The seed creates the qualifiers and says in its own comment that the machine-readable mapping from qualifier to answer &quot;belongs to the Process build, not to the seed&quot; - this is that mapping, and it is CONFIGURATION rather than Apex for the same reason the assessment predicates are: LAW #1, a customer org carries its own rubric and its own qualifier text, and a binding compiled into a class would be ours imposed on theirs. Keyed to the qualifier&apos;s STORED AltifyId, never its label. An EVIDENCE binding names one or more contract codes and is satisfied by ANY of them, because a qualifier whose own text says &quot;the funds or the person who owns them&quot; is a disjunction and the binding follows the words. A COMPUTED binding names a predicate the ledger evaluates and no contract at all.</description>
    <label>AAO Qualifier Binding</label>
    <pluralLabel>AAO Qualifier Bindings</pluralLabel>
</CustomObject>