force-app/main/default/objects/AAO_Qualifier_Binding__mdt/fields/AAO_Contract_Codes__c.field-meta.xml
<CustomField>
    <fullName>AAO_Contract_Codes__c</fullName>
    <description>EVIDENCE plane only. One or more proposition codes, semicolon separated, satisfied by ANY of them. FUNDS binds B3;B1 because its own text reads 'the funds OR the person who owns them' - the binding follows the qualifier's words rather than a preference.</description>
    <label>Contract Codes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>