force-app/main/default/objects/AAO_Qualifier_Binding__mdt/fields/AAO_Plane__c.field-meta.xml
<CustomField>
    <fullName>AAO_Plane__c</fullName>
    <description>EVIDENCE or COMPUTED, as the qualifier's own seeded tip declares. Recorded here so a reader never has to infer a plane from whether another field happens to be filled.</description>
    <label>Plane</label>
    <length>40</length>
    <type>Text</type>
</CustomField>