force-app/main/default/objects/AAO_Qualifier_Binding__mdt/fields/AAO_Predicate__c.field-meta.xml
<CustomField>
    <fullName>AAO_Predicate__c</fullName>
    <description>COMPUTED plane only. The ledger predicate that answers this qualifier, evaluated with no model call and no contract. Blank on an EVIDENCE binding.</description>
    <label>Predicate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>