force-app/main/default/objects/AAO_Qualifier_Binding__mdt/fields/AAO_Qualifier_Code__c.field-meta.xml
<CustomField>
    <fullName>AAO_Qualifier_Code__c</fullName>
    <description>The qualifier's STORED AltifyId suffix, e.g. PROBLEM. Never its label: an org relabels a qualifier and this binding must not silently start meaning something else, which is the seventy-sixth stamp's hazard.</description>
    <label>Qualifier Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>